--- a/README.rdoc
+++ b/README.rdoc
@@ -1,27 +1,8 @@
-== README
+== HooperConnect
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a web application that makes it easy for basketball players and basketball teams find each other. 
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+This is the first prototype, so be on the lookout for updates!
 
 
 Please feel free to use a different markup language if you do not plan to run
